# russian-spelling-bee

./: .dockerignore  .gitignore  Dockerfile  README.md  STATUS.md  mprocs.yaml  todo.md
backend/: pyproject.toml
backend/data/: fold-report.md  overrides.yaml  stub_lemmas.tsv
backend/scripts/: build_dictionary.py  sample_puzzles.py
backend/src/rsb/: __init__.py  alphabet.py  api.py  dictionary.py  folds.py  generator.py  lemmatizer.py  overrides.py  scoring.py  state_store.py  store.py
backend/tests/: test_alphabet.py  test_alphabet_canonical.py  test_api.py  test_dictionary.py  test_folds.py  test_generator.py  test_lemmatizer.py  test_overrides.py  test_scoring.py
docs/: deploy-huggingface.md  folding-rules.md  original-design.md  space.README.md
docs/benchmarks/: README.md
docs/benchmarks/runs/2026-05-26-folds-v1/: raw.json  report.md
docs/benchmarks/runs/2026-05-26-form-fitness-v1/: raw.json  report.md
docs/benchmarks/runs/2026-05-26-form-fitness-v2/: raw.json  report.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte
frontend/src/lib/: AnswersModal.svelte  FoundList.svelte  Hive.svelte  Input.svelte  NewGame.svelte  RankBar.svelte  ThemeToggle.svelte  Toast.svelte  api.ts  persist.ts  store.svelte.ts
frontend/src/styles/: app.css
scripts/: deploy_hf.sh
