[project]
name = "rsb"
version = "0.1.0"
description = "Russian Spelling Bee — backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pymorphy3>=2.0",
    "pymorphy3-dicts-ru>=2.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rsb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
